Add pirate ipsum to index.html

--- a/tutorials/html-boilerplate/index.html
+++ b/tutorials/html-boilerplate/index.html
@@ -8,7 +8,11 @@
 <body>
     <p>This is my first paragraph as well :)</p>
     <p>This is my second paragraph!!</p>
-    <h1></h1>
-    <h2></h2>
+    <h1>Pirate Ipsum</h1>
+    <p>Prow scuttle parrel provost Sail ho shrouds spirits <strong>boom</strong> mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>    
+    <h2>More pirate ipsum</h2>
+    <p>Deadlights jack lad <strong>schooner</strong> scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p> 
+    <h3>Even more...</h3>
+    <p>Trysail Sail ho Corsair red ensign hulk <em>smartly</em> boom jib rum gangway. Case shot Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas boatswain schooner gaff booty Jack Tar transom spirits.</p>
 </body>
 </html>
