Add index file and create lists

--- a/tutorials/html-boilerplate/index.html
+++ b/tutorials/html-boilerplate/index.html
@@ -14,5 +14,8 @@
     <p>Deadlights jack lad <strong>schooner</strong> scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p> 
     <h3>Even more...</h3>
     <p>Trysail Sail ho Corsair red ensign hulk <em>smartly</em> boom jib rum gangway. Case shot Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas boatswain schooner gaff booty Jack Tar transom spirits.</p>
+
+    <!-- this is an html comment. I used Pirate Ipsum for the above paragraphs -->
+
 </body>
 </html>
