Add places and movie lists

--- a/tutorials/html-boilerplate/list.html
+++ b/tutorials/html-boilerplate/list.html
@@ -20,5 +20,21 @@
     <li>Walk the dog</li>
     <li>Practice coding</li>
 </ol>
+
+<h3> Places </h3>
+<ul>
+    <li>Japan</li>
+    <li>Mexico</li>
+    <li>Eastern Canada</li>
+</ul>
+
+<h3>Movies</h3>
+<ol>
+    <li>The Matrix</li>
+    <li>Captain America</li>
+    <li>Thor</li>
+</ol>
+
+
 </body>
 </html>
