Add anchor tag to Odin about page

--- a/tutorials/odin-links-and-images/index.html
+++ b/tutorials/odin-links-and-images/index.html
@@ -4,10 +4,14 @@
 <head>
 <meta charset = "utf-8">
 <title> Links and images</title>
-<body>
-<h1>Homepage</h1>
-</body>
 
 </head>
 
+<body>
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about">click me</a>
+
+    </body>
+
 </html>
+
